tests/__snapshots__/validation-configFile.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`'tstyche.config.json' file handles list item of wrong type: stderr 1`] = `
"Error: Item of the 'testFileMatch' list must be of type string.

  1 | {
  2 |   "testFileMatch": [
> 3 |     true
    |     ^
  4 |   ]
  5 | }

      at ./tstyche.config.json:3:5

"
`;

exports[`'tstyche.config.json' file handles option argument of wrong type: stderr 1`] = `
"Error: Option 'failFast' requires an argument of type boolean.

  1 | {
> 2 |   "failFast": "always"
    |               ^
  3 | }

      at ./tstyche.config.json:2:15

"
`;

exports[`'tstyche.config.json' file handles single quoted list items: stderr 1`] = `
"Error: String literal with double quotes expected.

  1 | {
> 2 |   "target": ['4.8']
    |              ^
  3 | }

      at ./tstyche.config.json:2:14

"
`;

exports[`'tstyche.config.json' file handles single quoted property names: stderr 1`] = `
"Error: String literal with double quotes expected.

  1 | {
> 2 |   'failFast': true
    |   ^
  3 | }

      at ./tstyche.config.json:2:3

"
`;

exports[`'tstyche.config.json' file handles single quoted values: stderr 1`] = `
"Error: String literal with double quotes expected.

  1 | {
> 2 |   "rootPath": '../'
    |               ^
  3 | }

      at ./tstyche.config.json:2:15

"
`;

exports[`'tstyche.config.json' file handles syntax error: stderr 1`] = `
"Error: '}' expected. ts(1005)

  1 | {
  2 |   'failFast': true
> 3 | 
    | ^

      at ./tstyche.config.json:3:1

"
`;

exports[`'tstyche.config.json' file handles unknown options: stderr 1`] = `
"Error: Unknown option 'cache'.

  1 | {
> 2 |   "cache": "all",
    |   ^
  3 |   "silent": true,
  4 |   "testFileMatch": [
  5 |     "**/packages/*/__typetests__/*.test.ts"
  6 |   ]

      at ./tstyche.config.json:2:3

Error: Unknown option 'silent'.

  1 | {
  2 |   "cache": "all",
> 3 |   "silent": true,
    |   ^
  4 |   "testFileMatch": [
  5 |     "**/packages/*/__typetests__/*.test.ts"
  6 |   ]

      at ./tstyche.config.json:3:3

"
`;

exports[`'tstyche.config.json' file handles wrong root value: stderr 1`] = `
"Error: The root value of a configuration file must be an object literal.

> 1 | [
    | ^
  2 |   {
  3 |     "setupTimeout": 30
  4 |   }
  5 | ]

      at ./tstyche.config.json:1:1

"
`;

exports[`'tstyche.config.json' file when tabs are used for indentation, handles option argument of wrong type: stderr 1`] = `
"Error: Option 'rootPath' requires an argument of type string.

  1 | {
  2 |  "failFast": false,
> 3 |  "rootPath": true
    |              ^
  4 | }
  5 | 

      at ./tstyche.config.json:3:14

"
`;
